mcfida/g3/getfree
mcfutil.c:831:10: error: conflicting types for 'getfree'
__int64  getfree( network_t *net) 
         ^
./mcfutil.h:36:13: note: previous declaration is here
extern long getfree _PROTO_(( network_t * ));
            ^
mcfutil.c:848:12: error: expected expression
*( _OWORD *)&net->nodes = 0LL; 
           ^
mcfutil.c:848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&net->nodes = 0LL; 
   ^
mcfutil.c:849:12: error: expected expression
*( _OWORD *)&net->arcs = 0LL; 
           ^
mcfutil.c:849:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&net->arcs = 0LL; 
   ^
mcfutil.c:850:12: error: expected expression
*( _OWORD *)&net->dummy_arcs = 0LL; 
           ^
mcfutil.c:850:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&net->dummy_arcs = 0LL; 
   ^
7 errors generated.
